# BNO08x-I2C-Firmware

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
bno08x_teensy/bno08x_teensy_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
bno08x_teensy/bno08x_teensy_ws/devel/lib/pkgconfig/: bno08x-teensy.pc
bno08x_teensy/bno08x_teensy_ws/devel/share/bno08x-teensy/cmake/: bno08x-teensyConfig.cmake
bno08x_teensy/bno08x_teensy_ws/src/: CMakeLists.txt
bno08x_teensy/bno08x_teensy_ws/src/bno08x-teensy/: CMakeLists.txt  package.xml
bno08x_teensy/bno08x_teensy_ws/src/bno08x-teensy/msg/: raw_imu.msg
bno08x_teensy/firmware/: firmware.ino
docs/: CNAME  Doxyfile.in  header.html  index.html
docs/html/: annotated.html  annotated_dup.js  bno085_8h_source.html  bno08x_8c.html  bno08x_8c.js  bno08x_8h.html  bno08x_8h.js  bno08x_8h__dep__incl.md5  bno08x_8h__incl.md5  bno08x_8h_a5520d696f06188399629d18b933d5812_cgraph.md5  bno08x_8h_source.html  classes.html  defs_8h.html  defs_8h.js  defs_8h__dep__incl.md5  defs_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_dup.js  functions_e.html  functions_f.html  functions_g.html  functions_h.html  functions_i.html  functions_j.html  functions_k.html  functions_l.html  functions_m.html  functions_n.html  functions_p.html  functions_q.html  functions_r.html  functions_s.html  functions_t.html  functions_u.html  (+228 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  defines_0.js  (+47 more)
docs/latex/: annotated.tex  bno085_8h_source.tex  defs_8h.tex  defs_8h.tex.tmp  defs_8h__dep__incl.dot  defs_8h_source.tex  files.tex  i2c_8h_source.tex  main_8c.tex  main_8c.tex.tmp  main_8c__incl.dot  md_README.tex  refman.tex  structaccelerometer__report.tex  structambient__light__report.tex  structarvr__stabilised__game__rotation__vector__report.tex  structarvr__stabilised__rotation__vector__report.tex  structarvr__stabilized__game__rotation__vector__report.tex  structarvr__stabilized__rotation__vector__report.tex  structcircle__detector__report.tex  structflip__detector__report.tex  structgame__rotation__vector__report.tex  structgeomagnetic__rotation__vector__report.tex  structgravity__report.tex  structgyroscope__report.tex  structheart__rate__monitor__report.tex  structhumidity__report.tex  structi2c__interface.tex  structi2c__message.tex  structlinear__acceleration__report.tex  structmagnetic__field__report.tex  structpersonal__activity__classifier__report.tex  structpickup__detector__report.tex  structpocket__detector__report.tex  structpressure__report.tex  structproximity__report.tex  structraw__accelerometer__report.tex  structraw__gyroscope__report.tex  structraw__magnetometer__report.tex  structrotation__vector__report.tex  (+17 more)
include/: CMakeLists.txt
src/: CMakeLists.txt  README.md  bno085.h  bno08x.c  bno08x.h  defs.h  i2c.h  logger.c  logger.h  main.c  output.c  output.h  parsers.c  parsers.h  q_points.h  response_sizes.h  sensor_reports.h  sensors.c  sensors.h
